(lang dune 3.20)

(name pulse)

(generate_opam_files true)

(source
 (github Ender06-1/Pulse))

(authors "Ender <ndxendernight@gmail.com>")

(license MIT)

(documentation https://github.com/Ender06-1/Pulse)

(package
 (name pulse)
 (synopsis "Simple programming language")
 (description "Simple programming language")
 (depends ocaml)
 (tags
  (programming language)))
